Closed
Bug 887465
Opened 12 years ago
Closed 12 years ago
double-conversion/utils.h and wtf/Assertions.h both define ASSERT in different ways
Categories
(Core :: MFBT, defect)
Core
MFBT
Tracking
()
RESOLVED
FIXED
mozilla25
People
(Reporter: ehoogeveen, Assigned: ehoogeveen)
References
Details
Attachments
(1 file)
mfbt/double-conversion/utils.h and js/src/assembler/wtf/Assertions.h both define ASSERT (utils.h for double-conversion stuff and Assertions.h for Yarr), and their definitions don't match. So in addition to producing a compilation warning, it's hard to be sure which definition ends up getting used.
This patch replaces the ones in utils.h with MOZ_ equivalents (matching Assertions.h), and wraps the ASSERT define in Assertions.h in an #ifdef to prevent the compiler warning. This feels a bit hacky, but alternative patches would have been a fair bit more extensive.
Attachment #767973 -
Flags: review?(jwalden+bmo)
Updated•12 years ago
|
Attachment #767973 -
Flags: review?(jwalden+bmo) → review+
Comment 1•12 years ago
|
||
Try push:
https://tbpl.mozilla.org/?tree=Try&rev=e8f29c1f8c61
If that comes back green I'll push both patches. Thanks!
Comment 2•12 years ago
|
||
Looking green enough after a bit, pushed:
https://hg.mozilla.org/integration/mozilla-inbound/rev/87fedec338cf
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla25
Comment 3•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•