Bug 887465 - Rewrite double-conversion's assertions in terms of the MOZ_* assertions, and keep wtf (Yarr) from redefining them.  r=jwalden

--HG--
extra : rebase_source : 3cdadf85f6bc471f065d570cb03d2441886d3738